コールバック関数

--- a/qSIP/PhoneWidget.ui
+++ b/qSIP/PhoneWidget.ui
@@ -346,7 +346,7 @@
      <item>
       <widget class="QToolButton" name="toolButton_answer">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -366,7 +366,7 @@
      <item>
       <widget class="QToolButton" name="toolButton_hangup">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -386,7 +386,7 @@
      <item>
       <widget class="QToolButton" name="toolButton_call">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
