--- a/qSIP/PhoneWidget.ui
+++ b/qSIP/PhoneWidget.ui
@@ -317,8 +317,6 @@
           <property name="font">
            <font>
             <pointsize>16</pointsize>
-            <weight>75</weight>
-            <bold>true</bold>
            </font>
           </property>
          </widget>
@@ -355,7 +353,7 @@
         <string>Answer</string>
        </property>
        <property name="icon">
-        <iconset resource="resources.qrc">
+        <iconset resource="../../ClickCall/resources.qrc">
          <normaloff>:/image/answer.svg</normaloff>:/image/answer.svg</iconset>
        </property>
        <property name="iconSize">
@@ -381,7 +379,7 @@
         <string>Hangup</string>
        </property>
        <property name="icon">
-        <iconset resource="resources.qrc">
+        <iconset resource="../../ClickCall/resources.qrc">
          <normaloff>:/image/hangup.svg</normaloff>:/image/hangup.svg</iconset>
        </property>
        <property name="iconSize">
@@ -407,7 +405,7 @@
         <string>Call</string>
        </property>
        <property name="icon">
-        <iconset resource="resources.qrc">
+        <iconset resource="../../ClickCall/resources.qrc">
          <normaloff>:/image/call.svg</normaloff>:/image/call.svg</iconset>
        </property>
        <property name="iconSize">
@@ -440,7 +438,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="../../ClickCall/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
