--- a/qSIP/SettingAccountForm.ui
+++ b/qSIP/SettingAccountForm.ui
@@ -14,18 +14,6 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <item>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
@@ -71,6 +59,30 @@
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="lineEdit_port"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_reregister">
+       <property name="text">
+        <string>Reregister</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
